--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
 <p>This line was added as part of Emergency Fix</p>
 <p>This line was added as part of Emergency Fix again</p>
 <div><img src="img_hello_git.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
+New Line
 </body>
 </html>
